Send a verification email and add link to email to verify said email. Update database with a Tx.
